Landlord/K8S-公共設施/Nginx ingress/ingress.yaml
# ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ig1
spec:
  ingressClassName: ig1
  rules:
  - host: test.k8s.org
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 8080
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 8080
